// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allow double dispatch when kind === "load": 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/first",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "FIRST",
}
`;

exports[`allow double dispatch when kind === "load": 1 - routes - FIRST - beforeEnter 1`] = `1`;

exports[`allow double dispatch when kind === "load": 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`allow double dispatch when kind === "load": 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`allow double dispatch when kind === "load": 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`allow double dispatch when kind === "load": 1 - title 1`] = `"FIRST"`;

exports[`allow double dispatch when kind === "load": firstRoute - /first - 1 - initial_state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "init",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "@@redux/INIT",
}
`;

exports[`allow double dispatch when kind === "load": firstRoute - /first - 1 - response 1`] = `
Object {
  "basename": "",
  "hash": "",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "scene": "",
    "search": "",
    "status": 200,
    "url": "/first",
  },
  "params": Object {},
  "query": Object {},
  "state": Object {},
  "type": "FIRST",
}
`;

exports[`allow double dispatch when kind === "load": firstRoute - /first - 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
    ],
    "from": null,
    "hash": "",
    "index": 0,
    "key": "345678",
    "kind": "load",
    "length": 1,
    "n": 1,
    "params": Object {},
    "pathname": "/first",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": -1,
        "key": "",
        "pathname": "",
        "scene": "",
        "search": "",
        "url": "",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "universal": false,
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`allow double dispatch when kind === "load": firstRoute - /first - 1 - title 1`] = `"FIRST"`;

exports[`do NOT dispatch actions with identical URLs more than once 1`] = `
Object {
  "basename": "",
  "hash": "bla",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "location": Object {
          "key": "345678",
          "pathname": "/second/foo",
          "scene": "",
          "search": "foo=bar",
          "url": "/second/foo?foo=bar#bla",
        },
        "params": Object {
          "param": "foo",
        },
        "query": Object {
          "foo": "bar",
        },
        "state": Object {},
        "type": "SECOND",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "location": Object {
          "key": "345678",
          "pathname": "/second/foo",
          "scene": "",
          "search": "foo=bar",
          "url": "/second/foo?foo=bar#bla",
        },
        "params": Object {
          "param": "foo",
        },
        "query": Object {
          "foo": "bar",
        },
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 2,
    "key": "345678",
    "kind": "push",
    "length": 3,
    "n": 1,
    "pathname": "/second/foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "bla",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second/foo",
        "scene": "",
        "search": "foo=bar",
        "url": "/second/foo?foo=bar#bla",
      },
      "params": Object {
        "param": "foo",
      },
      "query": Object {
        "foo": "bar",
      },
      "state": Object {},
      "type": "SECOND",
    },
    "scene": "",
    "search": "foo=bar",
    "status": 200,
    "url": "/second/foo?foo=bar#bla",
  },
  "params": Object {
    "param": "foo",
  },
  "query": Object {
    "foo": "bar",
  },
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - response 1`] = `
Object {
  "basename": "",
  "hash": "bla",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "location": Object {
          "key": "345678",
          "pathname": "/second/foo",
          "scene": "",
          "search": "foo=bar",
          "url": "/second/foo?foo=bar#bla",
        },
        "params": Object {
          "param": "foo",
        },
        "query": Object {
          "foo": "bar",
        },
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "pathname": "/second/foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "scene": "",
    "search": "foo=bar",
    "status": 200,
    "url": "/second/foo?foo=bar#bla",
  },
  "params": Object {
    "param": "foo",
  },
  "query": Object {
    "foo": "bar",
  },
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - response 2`] = `
Object {
  "basename": "",
  "hash": "bla",
  "location": Object {
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "location": Object {
          "key": "345678",
          "pathname": "/second/foo",
          "scene": "",
          "search": "foo=bar",
          "url": "/second/foo?foo=bar#bla",
        },
        "params": Object {
          "param": "foo",
        },
        "query": Object {
          "foo": "bar",
        },
        "state": Object {},
        "type": "SECOND",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "location": Object {
          "key": "345678",
          "pathname": "/second/foo",
          "scene": "",
          "search": "foo=bar",
          "url": "/second/foo?foo=bar#bla",
        },
        "params": Object {
          "param": "foo",
        },
        "query": Object {
          "foo": "bar",
        },
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "index": 2,
    "key": "345678",
    "kind": "push",
    "length": 3,
    "n": 1,
    "pathname": "/second/foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "bla",
      "location": Object {
        "index": 1,
        "key": "345678",
        "pathname": "/second/foo",
        "scene": "",
        "search": "foo=bar",
        "url": "/second/foo?foo=bar#bla",
      },
      "params": Object {
        "param": "foo",
      },
      "query": Object {
        "foo": "bar",
      },
      "state": Object {},
      "type": "SECOND",
    },
    "scene": "",
    "search": "foo=bar",
    "status": 200,
    "url": "/second/foo?foo=bar#bla",
  },
  "params": Object {
    "param": "foo",
  },
  "query": Object {
    "foo": "bar",
  },
  "state": Object {},
  "type": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - NEVER_USED_PATHLESS - thunk 2`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - REDIRECTED - onComplete 2`] = `0`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - SECOND - beforeEnter 1`] = `1`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - routes - SECOND - beforeEnter 2`] = `1`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "location": Object {
          "key": "345678",
          "pathname": "/second/foo",
          "scene": "",
          "search": "foo=bar",
          "url": "/second/foo?foo=bar#bla",
        },
        "params": Object {
          "param": "foo",
        },
        "query": Object {
          "foo": "bar",
        },
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "bla",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {
      "param": "foo",
    },
    "pathname": "/second/foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {
      "foo": "bar",
    },
    "scene": "",
    "search": "foo=bar",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second/foo?foo=bar#bla",
  },
  "title": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - state 2`] = `
Object {
  "location": Object {
    "basename": "",
    "blocked": null,
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "location": Object {
          "key": "345678",
          "pathname": "/first",
          "scene": "",
          "search": "",
          "url": "/first",
        },
        "params": Object {},
        "query": Object {},
        "state": Object {},
        "type": "FIRST",
      },
      Object {
        "basename": "",
        "hash": "bla",
        "location": Object {
          "key": "345678",
          "pathname": "/second/foo",
          "scene": "",
          "search": "foo=bar",
          "url": "/second/foo?foo=bar#bla",
        },
        "params": Object {
          "param": "foo",
        },
        "query": Object {
          "foo": "bar",
        },
        "state": Object {},
        "type": "SECOND",
      },
    ],
    "from": null,
    "hash": "bla",
    "index": 1,
    "key": "345678",
    "kind": "push",
    "length": 2,
    "n": 1,
    "params": Object {
      "param": "foo",
    },
    "pathname": "/second/foo",
    "pop": false,
    "prev": Object {
      "basename": "",
      "hash": "",
      "location": Object {
        "index": 0,
        "key": "345678",
        "pathname": "/first",
        "scene": "",
        "search": "",
        "url": "/first",
      },
      "params": Object {},
      "query": Object {},
      "state": Object {},
      "type": "FIRST",
    },
    "query": Object {
      "foo": "bar",
    },
    "scene": "",
    "search": "foo=bar",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "universal": false,
    "url": "/second/foo?foo=bar#bla",
  },
  "title": "SECOND",
}
`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - title 1`] = `"SECOND"`;

exports[`do NOT dispatch actions with identical URLs more than once: {"type":"SECOND","params":{"param":"foo"},"query":{"foo":"bar"},"hash":"bla"} - title 2`] = `"SECOND"`;
